package anysync

import (
	"os"
	"path/filepath"
	"testing"

	"github.com/anyproto/any-sync/commonspace/object/accountdata"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
)

// TestNewSpaceManager tests creating a new SpaceManager.
func TestNewSpaceManager(t *testing.T) {
	// Create temp directory
	tempDir := t.TempDir()

	// Generate keys
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	// Create SpaceManager
	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	require.NotNil(t, sm)
	defer sm.Close()

	// Verify storage directory was created
	storageDir := filepath.Join(tempDir, "spaces")
	_, err = os.Stat(storageDir)
	require.NoError(t, err)
}

// TestNewSpaceManager_NilKeys tests that creation fails without keys.
func TestNewSpaceManager_NilKeys(t *testing.T) {
	tempDir := t.TempDir()

	sm, err := NewSpaceManager(tempDir, nil)
	assert.Error(t, err)
	assert.Nil(t, sm)
	assert.Contains(t, err.Error(), "account keys required")
}

// TestCreateSpace_Success tests successful space creation.
func TestCreateSpace_Success(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create a space
	err = sm.CreateSpace("ref-1", "Test Space", map[string]string{
		"description": "A test space",
	})
	require.NoError(t, err)

	// Verify space exists in memory
	spaces := sm.ListSpaces()
	require.Len(t, spaces, 1)
	assert.Equal(t, "Test Space", spaces[0].Name)
	assert.Equal(t, "A test space", spaces[0].Metadata["description"])
	assert.Greater(t, spaces[0].CreatedAt, int64(0))
	assert.Equal(t, spaces[0].CreatedAt, spaces[0].UpdatedAt)
	assert.NotEmpty(t, spaces[0].SpaceID) // ID is generated
}

// TestCreateSpace_MultipleSpaces tests creating multiple spaces with unique IDs.
func TestCreateSpace_MultipleSpaces(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create multiple spaces - each will get a unique generated ID
	err = sm.CreateSpace("ref-1", "First Space", nil)
	require.NoError(t, err)

	err = sm.CreateSpace("ref-2", "Second Space", nil)
	require.NoError(t, err)

	// Verify both spaces exist
	spaces := sm.ListSpaces()
	assert.Len(t, spaces, 2)

	names := []string{spaces[0].Name, spaces[1].Name}
	assert.Contains(t, names, "First Space")
	assert.Contains(t, names, "Second Space")

	// Verify space IDs are different (generated by Any-Sync)
	assert.NotEqual(t, spaces[0].SpaceID, spaces[1].SpaceID)
}

// TestListSpaces_Empty tests listing when no spaces exist.
func TestListSpaces_Empty(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	spaces := sm.ListSpaces()
	assert.Empty(t, spaces)
}

// TestListSpaces_Multiple tests listing multiple spaces.
func TestListSpaces_Multiple(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create multiple spaces
	err = sm.CreateSpace("ref-1", "Space 1", nil)
	require.NoError(t, err)

	err = sm.CreateSpace("ref-2", "Space 2", nil)
	require.NoError(t, err)

	err = sm.CreateSpace("ref-3", "Space 3", nil)
	require.NoError(t, err)

	// List and verify
	spaces := sm.ListSpaces()
	assert.Len(t, spaces, 3)

	// Verify all spaces are present (order may vary)
	names := make([]string, len(spaces))
	for i, space := range spaces {
		names[i] = space.Name
	}
	assert.Contains(t, names, "Space 1")
	assert.Contains(t, names, "Space 2")
	assert.Contains(t, names, "Space 3")
}

// TestGetSpace_Success tests retrieving a space by ID.
func TestGetSpace_Success(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create a space
	err = sm.CreateSpace("ref-1", "Test Space", map[string]string{
		"key": "value",
	})
	require.NoError(t, err)

	// Get the space (need to find the actual spaceID first)
	spaces := sm.ListSpaces()
	require.Len(t, spaces, 1)
	actualSpaceID := spaces[0].SpaceID

	space, err := sm.GetSpace(actualSpaceID)
	require.NoError(t, err)
	assert.Equal(t, "Test Space", space.Name)
	assert.Equal(t, "value", space.Metadata["key"])
}

// TestGetSpace_NotFound tests retrieving a non-existent space.
func TestGetSpace_NotFound(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	space, err := sm.GetSpace("non-existent-space")
	assert.Error(t, err)
	assert.Nil(t, space)
	assert.Contains(t, err.Error(), "space not found")
}

// TestDeleteSpace_Success tests successful space deletion.
func TestDeleteSpace_Success(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create a space
	err = sm.CreateSpace("ref-1", "Test Space", nil)
	require.NoError(t, err)

	// Get the actual space ID
	spaces := sm.ListSpaces()
	require.Len(t, spaces, 1)
	actualSpaceID := spaces[0].SpaceID

	// Delete the space
	err = sm.DeleteSpace(actualSpaceID)
	require.NoError(t, err)

	// Verify space is gone
	spaces = sm.ListSpaces()
	assert.Empty(t, spaces)

	// Verify storage database file is gone
	dbPath := filepath.Join(tempDir, "spaces", actualSpaceID+".db")
	_, err = os.Stat(dbPath)
	assert.True(t, os.IsNotExist(err))
}

// TestDeleteSpace_NotFound tests deleting a non-existent space.
func TestDeleteSpace_NotFound(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	err = sm.DeleteSpace("non-existent-space")
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "space not found")
}

// TestSpaceManager_Persistence tests that spaces persist across manager restarts.
func TestSpaceManager_Persistence(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	// Create first manager and add spaces
	sm1, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)

	err = sm1.CreateSpace("ref-1", "Space 1", map[string]string{"key": "value1"})
	require.NoError(t, err)

	err = sm1.CreateSpace("ref-2", "Space 2", map[string]string{"key": "value2"})
	require.NoError(t, err)

	// Get actual space IDs
	spaces1 := sm1.ListSpaces()
	require.Len(t, spaces1, 2)

	// Close first manager
	err = sm1.Close()
	require.NoError(t, err)

	// Create second manager with same data directory
	sm2, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm2.Close()

	// Verify spaces persisted
	spaces2 := sm2.ListSpaces()
	require.Len(t, spaces2, 2)

	// Find and verify each space
	spacesByName := make(map[string]*SpaceMetadata)
	for _, space := range spaces2 {
		spacesByName[space.Name] = space
	}

	space1, ok := spacesByName["Space 1"]
	require.True(t, ok)
	assert.Equal(t, "value1", space1.Metadata["key"])

	space2, ok := spacesByName["Space 2"]
	require.True(t, ok)
	assert.Equal(t, "value2", space2.Metadata["key"])
}

// TestSpaceManager_SpaceStorageCreated tests that space storage is actually created.
func TestSpaceManager_SpaceStorageCreated(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create a space
	err = sm.CreateSpace("ref-1", "Test Space", nil)
	require.NoError(t, err)

	// Get the actual space ID
	spaces := sm.ListSpaces()
	require.Len(t, spaces, 1)
	actualSpaceID := spaces[0].SpaceID

	// Verify storage database file exists
	dbPath := filepath.Join(tempDir, "spaces", actualSpaceID+".db")
	info, err := os.Stat(dbPath)
	require.NoError(t, err)
	assert.False(t, info.IsDir())
}

// TestSpaceManager_ConcurrentAccess tests thread-safety of SpaceManager.
func TestSpaceManager_ConcurrentAccess(t *testing.T) {
	tempDir := t.TempDir()
	keys, err := accountdata.NewRandom()
	require.NoError(t, err)

	sm, err := NewSpaceManager(tempDir, keys)
	require.NoError(t, err)
	defer sm.Close()

	// Create some initial spaces
	for i := 0; i < 5; i++ {
		err = sm.CreateSpace("", "", nil)
		if err != nil {
			// Spaces should be created successfully
			t.Logf("Warning: failed to create initial space: %v", err)
		}
	}

	// Perform concurrent operations
	done := make(chan bool, 3)

	// Goroutine 1: List spaces repeatedly
	go func() {
		for i := 0; i < 50; i++ {
			sm.ListSpaces()
		}
		done <- true
	}()

	// Goroutine 2: Get spaces repeatedly
	go func() {
		for i := 0; i < 50; i++ {
			spaces := sm.ListSpaces()
			if len(spaces) > 0 {
				sm.GetSpace(spaces[0].SpaceID)
			}
		}
		done <- true
	}()

	// Goroutine 3: Create and delete spaces
	go func() {
		for i := 0; i < 10; i++ {
			err := sm.CreateSpace("", "", nil)
			if err == nil {
				spaces := sm.ListSpaces()
				if len(spaces) > 0 {
					sm.DeleteSpace(spaces[len(spaces)-1].SpaceID)
				}
			}
		}
		done <- true
	}()

	// Wait for all goroutines
	for i := 0; i < 3; i++ {
		<-done
	}

	// If we get here without race conditions, the test passes
}
